[package]
name = "roguelike-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "roguelike-game"
path = "/src/main.rs"

[lib]
name = "roguelike-game"
path = "/src/lib/mod.rs"

[dependencies]
rltk = "0.8.0"
specs = "0.16.1"
specs-derive = "0.4.1"